@@ -1,3 +1,4 @@
+    FIXED: loading defaults on the Panel page in Konfigurator has no effect
     FIXED: changes to "Show new/close tab buttons" don't take effect immediately
     FIXED: when options requiring a gui restart are changed, the panel history is lost
     FIXED: [ 277838 ] Swap Panels no longer works
